--- a/index.html
+++ b/index.html
@@ -134,6 +134,6 @@
       <i style="--speed: 15; --bg: cyan" class="square"></i>
     </div> 
 
-    <script src="C:/Users/devaang.misra.THOMAS-CARROLL/Desktop/personal/bleh/Script2.js"></script>
+    <script src="Script2.js"></script>
 </body>
 </html>
